--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 	<div class="col-md-8 col-md-offset-2">
             <h1>Sponsors</h1>
 <p>Open Source Comes to Campus is funded through generous donations from individuals and companies.  Our thanks to Patron level sponsors <b>MongoDB</b> and <b>Stripe</b>, and to Bronze level sponsor <b>Puppet Labs</b>.</p>
-<p>Additionally, we have ongoing relationships with <b>Github</b> to sponsor food costs for events, and with <b>Google</b> to support the organization and sponsor some travel costs for events.</p>
+<p>Additionally, we have ongoing relationships with <b>GitHub</b> to sponsor food costs for events, and with <b>Google</b> to support the organization and sponsor some travel costs for events.</p>
         </div>
     </div>
 
