added UMD image to site

--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@ MY_NAME</p></pre>
 
 		<div class="row">
 			<div class="col-md-4">
-				<img src="./static/img/pe_noimage.jpg" class="img-thumbnail">
+				<img src="./static/img/pe_umd.jpg" class="img-thumbnail">
 				<h4>University of Maryland College Park</h4>
 				<h4 class="date">February 25th and 26th, 2012</h4>
 				<p>Hosted by the <a href="http://www.cs.umd.edu/~awc/">Association of Women in Computing</a>.</p>
