--- a/index.html
+++ b/index.html
@@ -219,10 +219,11 @@ MY_NAME</p></pre>
 				<a href="http://openhatch.org/blog/2013/teaching-open-source-at-indiana-university-bloomington/"><span class="glyphicon glyphicon-pencil"></span>  Blog post</a>
 			</div>
 			<div class="col-md-4">
-				<img src="./static/img/pe_noimage.jpg" class="img-thumbnail">
+				<img src="./static/img/pe_ccsf.jpg" class="img-thumbnail">
 				<h4>Community College of San Francisco</h4>
 				<h4 class="date">June 29th, 2013</h4>
 				<p>Hosted by <a href="http://www.ccsf.edu/coders">CCSF Coders</a> and the <a href="http://www.ccsf.edu/lug">CCSF Linux Users Group</a>.</p>
+				<a href="http://www.flickr.com/photos/paulproteus/sets/72157639588752735/"><span class="glyphicon glyphicon-picture"></span>  Pictures</a>
 	        	</div>
 			<div class="col-md-4">
 				<img src="./static/img/pe_neu.jpg" class="img-thumbnail">
@@ -294,7 +295,7 @@ MY_NAME</p></pre>
 				<p>Hosted by the <a href="http://www.cs.umd.edu/~awc/">Association of Women in Computing</a>.</p>
 			</div>
 			<div class="col-md-4">
-				<img src="./static/img/pe_noimage.jpg" class="img-thumbnail">
+				<img src="./static/img/pe_mit.jpg" class="img-thumbnail">
 				<h4>Massachusetts Institute of Technology</h4>
 				<h4 class="date">September 20th, 2011</h4>
 				<p>Hosted by the <a href="http://sipb.mit.edu/">MIT Student Information Processing Board</a>.</p>
