whoops wrong name for CCSF

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ MY_NAME</p></pre>
 			</div>
 			<div class="col-md-4">
 				<img src="./static/img/pe_ccsf.jpg" class="img-thumbnail">
-				<h4>Community College of San Francisco</h4>
+				<h4>City College of San Francisco</h4>
 				<h4 class="date">June 29th, 2013</h4>
 				<p>Hosted by <a href="http://www.ccsf.edu/coders">CCSF Coders</a> and the <a href="http://www.ccsf.edu/lug">CCSF Linux Users Group</a>.</p>
 				<a href="http://www.flickr.com/photos/paulproteus/sets/72157639588752735/"><span class="glyphicon glyphicon-picture"></span>  Pictures</a>
