Fix broken HTML tags

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div id="wrap">
 
 <div class="content">
-<div class="main" role="main">
+    <div class="main" role="main">
       <div class="jumbotron masthead">
         <div class="container">
             <div class="headerpane">
@@ -302,17 +302,15 @@ MY_NAME</p></pre>
 				<h4>Massachusetts Institute of Technology</h4>
 				<h4 class="date">September 20th, 2011</h4>
 				<p>Hosted by the <a href="http://sipb.mit.edu/">MIT Student Information Processing Board</a>.</p>
-	        	</div>
+	        </div>
 			<div class="col-md-4">
 				<img src="./static/img/pe_penn.jpg" class="img-thumbnail">
 				<h4>University of Pennsylvania</h4>
 				<h4 class="date">September 25th and 26th, 2010</h4>
 				<p>Hosted by the Penn Department of Computer Science.</p>
-				<a href="http://openhatch.org/blog/2010/photos-from-penn/"></span>  Pictures</a>  &nbsp;&nbsp;
+				<a href="http://openhatch.org/blog/2010/photos-from-penn/"><span class="glyphicon glyphicon-picture"></span> Pictures</a>  &nbsp;&nbsp;
 				<a href="http://opensource.com/life/10/11/introducing-students-world-open-source-day-1"><span class="glyphicon glyphicon-pencil"></span>  Blog post</a>
-
-
-	        	</div>
+	        </div>
 		</div>
 
 		<div class="row">
@@ -320,7 +318,7 @@ MY_NAME</p></pre>
 			<p>Want to learn more about Open Source Comes to Campus?  You can <a href="http://lists.openhatch.org/mailman/listinfo/osctc-planning">join our mailing list</a> and <a href="http://openhatch.org/blog/tag/osctc/">read more on our blog</a>.</p>
 			</div>
 		</div>
-
+    </div>
 </div>
 </div>
 
