made an extra extra small rule for the top bar of images so they shrink properly, then appear full size under 500px

--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
     </div> 
 	<div class="container no-space wide-container">
 	        <div class="row no-space">
-	            <div class="col-md-4 no-space">
+	            <div class="col-xs-4 col-xxs-12 no-space">
 			<img src="./static/img/oh01.jpg" class="img-responsive">
 	            </div>
-		    <div class="col-md-4 no-space">
+		    <div class="col-xs-4 col-xxs-12 no-space">
 			<img src="./static/img/oh03.jpg" class="img-responsive">
 		    </div>
-		    <div class="col-md-4 no-space">		
+		    <div class="col-xs-4 col-xxs-12 no-space">		
 			<img src="./static/img/oh02.jpg" class="img-responsive">
 		    </div>    
 		</div>
