Added sponsorship section to bottom of page

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 	</div>
     </div> 
     
-    <div class="row">
+    <div id="sponsors" class="row">
 	<div class="col-md-8 col-md-offset-2">
             <h1>Sponsors</h1>
 <p>Open Source Comes to Campus is funded through generous donations from individuals and companies.  Our thanks to Patron level sponsors <b>MongoDB</b> and <b>Stripe</b>, and to Bronze level sponsor <b>Puppet Labs</b>.</p>
@@ -320,6 +320,86 @@ MY_NAME</p></pre>
 		</div>
     </div>
 </div>
+</div>
+
+<div id="sponsorship" class="container">
+    <div class="row">
+        <div class="col-md-8 col-md-offset-2">
+            <h1 id="pastevents">Sponsorship</h1>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-8 col-md-offset-2">
+            <p>The Open Source Comes to Campus workshop series is made possible by <a href="#sponsors">generous corporate sponsors</a> who support students entering the open source tech world. If your company would like to sponsor Open Source Comes to Campus, <a href="mailto:hello@openhatch.org">get in touch</a>!</p>
+        </div>
+        <div class="col-md-8 col-md-offset-2"><h2>Sponsorship tiers</h2></div>
+        <div class="tiers col-md-8 col-md-offset-2">
+            <div class="row">
+                <div class="col-xs-12">
+                    <h3>$1,000 &ndash; Individual Event</h3>
+                    <ul>
+                        <li>Your name and sponsorship level in all print,
+                        email, and web announcements for that event</li>
+                    </ul>
+                </div>
+                <div class="col-xs-12">
+                    <h3>$2,000 &ndash; Bronze</h3>
+                    <ul>
+                        <li>Your name and sponsorship level on the 
+                        program website</li>
+                        <li>Your name and sponsorship level on all print,
+                        email, and web announcements for one event</li>
+                        <li>Special invitation to send a person to career 
+                        panels at one event</li>
+                    </ul>
+                </div>
+                <div class="col-xs-12">
+                    <h3>$4,000 &ndash; Silver</h3>
+                    <ul>
+                        <li>Your name and sponsorship level on the 
+                        program website</li>
+                        <li>Your name and sponsorship level on all 
+                        email and web announcements, as well as mentioned to media in interviews about the program</li>
+                        <li>Special invitation to send a person to career 
+                        panels at two events</li>
+                    </ul>
+                </div>
+                <div class="col-xs-12">
+                    <h3>$8,000 &ndash; Gold</h3>
+                    <ul>
+                        <li>Your name and logo at opening and closing 
+                        of all workshops</li>
+                        <li>Your name and sponsorship level on the 
+                        program website</li>
+                        <li>Your name and sponsorship level on all 
+                        email and web announcements, as well as mentioned to media in interviews about the program</li>
+                        <li>Special invitation to send a person to career 
+                        panels at three events</li>
+                    </ul>
+                </div>
+                <div class="col-xs-12">
+                    <h3>$16,000 &ndash; Platinum</h3>
+                    <ul>
+                        <li>An invitation to provide brand signage at 
+                        every workshop, and to provide gifts to 
+                        attendees from your organization</li>
+                        <li>Your name and logo at opening and closing 
+                        of all workshops</li>
+                        <li>Your name and sponsorship level on the 
+                        program website</li>
+                        <li>Your name and sponsorship level on all 
+                        email and web announcements, as well as mentioned to media in interviews about the program</li>
+                        <li>Special invitation to send a person to career 
+                        panels at all events</li>
+                    </ul>
+                </div>
+                <div class="col-xs-12">
+                    <h3>$X &ndash; Custom Level</h3>
+                    <p>None of the above donation levels work for you? <a href="hello@openhatch.org">Email us</a> and we'll work something out.</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
 <div class="bluestripe bottomstripe">
