adds diversity section, updates past events, add projects

--- a/index.html
+++ b/index.html
@@ -77,6 +77,14 @@
 </ul>
 	</div>
     </div> 
+
+    <div id="diversity" class="row">
+	<div class="col-md-8 col-md-offset-2">
+         <h1>Our commitment to diversity</h2>
+<p>We believe in the power of open source to make the world a better place. We also believe that open source needs a broad and diverse group of contributors and community members to do so.  We're doing our best to make open source communities more diverse and more welcoming to newcomers - two mutually reinforcing goals.  Ever since our <a
+href="https://opensource.com/life/10/11/introducing-students-world-open-source-day-1">first event</a>, we've worked to make Open Source Comes to Campus events fun, safe, and newcomer-friendly and have worked with partners such as women-in-computing organizations to attract diverse participation. We're commited to these goals, as well as to continuous improvement, and we hope you'll join us in our efforts. 
+        </div>
+    </div>
     
     <div id="sponsors" class="row">
 	<div class="col-md-8 col-md-offset-2">
@@ -181,7 +189,7 @@ MY_NAME</p></pre>
 				<h4 class="date">October 19th, 2013</h4>
 				<p>Hosted by <a href="http://www.cs.columbia.edu/wics/">Columbia University's Women in Computer Science</a> and the <a href="http://adicu.com/">Application Development Initiative</a>.</p>
 				<a href="http://www.flickr.com/photos/paulproteus/sets/72157638427423795/"><span class="glyphicon glyphicon-picture"></span>  Pictures</a> &nbsp;&nbsp;
-				<span class="glyphicon glyphicon-star-empty"></span>  Blog post coming soon!
+				<a href="http://openhatch.org/blog/2014/teaching-open-source-at-columbia-university/"><span class="glyphicon glyphicon-pencil"></span>  Blog post</a>
 	        	</div>
 		</div>
 
@@ -192,7 +200,7 @@ MY_NAME</p></pre>
 				<h4 class="date">September 28th, 2013</h4>
 				<p>Hosted by the Computer Science Discipline at Morris.</p>
 				<a href="http://www.flickr.com/photos/paulproteus/sets/72157636106635206/"><span class="glyphicon glyphicon-picture"></span>  Pictures</a> &nbsp;&nbsp;
-				<span class="glyphicon glyphicon-star-empty"></span>  Blog post coming soon!
+				<a href="http://openhatch.org/blog/2014/teaching-open-source-at-morris/"><span class="glyphicon glyphicon-pencil"></span>  Blog post</a>
 			</div>
 			<div class="col-md-4">
 				<img src="./static/img/pe_uic.jpg" class="img-thumbnail">
