changes projects.html url, adds links

--- a/projects.html
+++ b/projects.html
@@ -36,12 +36,12 @@
 <h3 class="media-heading"><span class="glyphicon glyphicon-ok"></span> Step 1: Writing a Guide</h3>
 <p>Over time, we've learned that the best projects to recommend to newcomers are those that have clear, thorough guides for newcomers. We ask for:</p>
 <ul>
-<li>Contact information for the project as a whole, as well as one or more maintainers to be our point-people.</li>
-<li>A project overview explaing the purpose of the project, as well as its basic structure, tools and technologies.</li>
-<li>A step-by-step guide to installing the project/setting up the development environment.</li>
-<li>A step-by-step guide to making and contributing changes to the project.</li>
+<li><a href="http://opensource-events.com/#how-to-find-the-projects-community-maintainers">Contact information</a> for the project as a whole, as well as one or more maintainers to be our point-people.</li>
+<li>A <a href="http://opensource-events.com/#the-projects-structure">project overview</a> explaining the purpose of the project, as well as its basic structure, tools and technologies.</li>
+<li>A step-by-step <a href="http://opensource-events.com/#how-to-set-up-a-local-development-environment">installation guide</a> to help people set up the development environment.</li>
+<li>A step-by-step <a href="http://opensource-events.com/#contributing-changes-and-feedback">contribution guide</a> to help people make changes and contribute them back to the project.</li>
 </ul>
-<p>Of these, creating the installation guide seems to take the most time. We're happy to arrange a <b>set-up sprint</b> for your project. A set-up sprint is an IRC meeting or meetings where OpenHatch volunteers attempt to install your project. A sprint will help you quickly find and fix problems with dependencies, documentation, and more.</p>
+<p>Of these, creating the installation guide seems to take the most time. We're happy to arrange a <b>set-up sprint</b> for your project. A set-up sprint is an IRC meeting where OpenHatch volunteers attempt to install your project. A sprint will help you quickly find and fix problems with dependencies, documentation, and more.</p>
 	</div>
     </div>
 
