We're "Indiana University", not "University of Indiana"!

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ MY_NAME</p></pre>
 		<div class="row">
 			<div class="col-md-4">
 				<img src="./static/img/pe_iub.jpg" class="img-thumbnail">
-				<h4>University of Indiana at Bloomington</h4>
+				<h4>Indiana University Bloomington</h4>
 				<h4 class="date">September 21st, 2013</h4>
 				<p>Hosted by the <a href="http://www.soic.indiana.edu/">Indiana University School of Informatics and Computing</a> and the <a href="http://csclub.soic.indiana.edu/">Indiana University CS Club</a>.</p>
 				<a href="http://www.flickr.com/photos/paulproteus/sets/72157636075330234/"><span class="glyphicon glyphicon-picture"></span>  Pictures</a> &nbsp;&nbsp;
