adds splash page for scale

--- a/projects.html
+++ b/projects.html
@@ -157,6 +157,7 @@ MY_NAME</p></pre>
 			<div class="col-md-4 project">
 			<p><a href="https://openhatch.org/"><img src="https://openhatch.org/w/images/thumb/a/a6/Openhatch-logo.png/500px-Openhatch-logo.png" width="100px"></a></p>
 			<p>Matching prospective free software contributors with communities, tools, and education.</p>
+			<p><a href="https://github.com/openhatch/oh-mainline">Source</a></p>
 			<div class="row no-space">
 				<div class="col-md-6 pb">
 <a href="http://openhatch.readthedocs.org/en/latest/getting_started/project_overview.html"><span class="glyphicon glyphicon-thumbs-up"></span> Project Overview</a>
@@ -175,7 +176,7 @@ Contribution Guide</a>
 Installation Guide</a>
 				</div>
 			</div>
-                        <p>Events<br /> <a href="http://openhatch.org/blog/2013/teaching-open-source-in-chicago/">Chicago</a>, <a href="http://openhatch.org/blog/2013/teaching-open-source-at-purdue-university/">Purdue</a>, <a href="http://openhatch.org/blog/2013/infrequently-asked-questions-bloomington/">Bloomington</a></p>
+                        <p>Events<br /> University of Arizona, Princeton</p>
 	        	</div>
 			<div class="col-md-4">
 	        	</div>
