adds oppia to projects

--- a/projects.html
+++ b/projects.html
@@ -155,31 +155,55 @@ MY_NAME</p></pre>
 
         <div class="row">
 			<div class="col-md-4 project">
-			<p><a href="https://openhatch.org/"><img src="https://openhatch.org/w/images/thumb/a/a6/Openhatch-logo.png/500px-Openhatch-logo.png" width="100px"></a></p>
+			<p><div class="projectlogo"><a href="https://openhatch.org/"><img src="https://openhatch.org/w/images/thumb/a/a6/Openhatch-logo.png/500px-Openhatch-logo.png" width="100px"></a></div></p>
 			<p>Matching prospective free software contributors with communities, tools, and education.</p>
 			<p><a href="https://github.com/openhatch/oh-mainline">Source</a></p>
-			<div class="row no-space">
-				<div class="col-md-6 pb">
+				<div class="row no-space">
+					<div class="col-md-6 pb">
 <a href="http://openhatch.readthedocs.org/en/latest/getting_started/project_overview.html"><span class="glyphicon glyphicon-thumbs-up"></span> Project Overview</a>
-				</div>
-				<div class="col-md-6 pb">
+					</div>
+					<div class="col-md-6 pb">
 <a href="https://openhatch.org/wiki/First_Tasks#OpenHatch"><span class="glyphicon glyphicon-thumbs-up"></span> Curated Tasks</a>
+					</div>
 				</div>
-			</div>
-			<div class="row no-space">
-				<div class="col-md-6 pb">
+				<div class="row no-space">
+					<div class="col-md-6 pb">
 <a href="http://openhatch.readthedocs.org/en/latest/getting_started/getting_started.html"><span class="glyphicon glyphicon-thumbs-up"></span>
 Contribution Guide</a>
-                        </div>
-				<div class="col-md-6 pb">
+                        		</div>
+					<div class="col-md-6 pb">
 <a href="http://openhatch.readthedocs.org/en/latest/getting_started/installation.html"><span class="glyphicon glyphicon-thumbs-up"></span>
 Installation Guide</a>
+					</div>
 				</div>
-			</div>
                         <p>Events<br /> University of Arizona, Princeton</p>
 	        	</div>
-			<div class="col-md-4">
+			
+<div class="col-md-4 project">
+			<p><div class="projectlogo"><a href="http://oppia.org/"><img src="./static/img/oppia-logo.png"></a></div></p>
+			<p>Making it easy for anyone to create bite-sized learning journeys for others.</p>
+			<p><a href="https://code.google.com/p/oppia/">Source</a></p>
+				<div class="row no-space">
+					<div class="col-md-6 pb">
+<a href="https://code.google.com/p/oppia/"><span class="glyphicon glyphicon-thumbs-up"></span> Project Overview</a>
+					</div>
+					<div class="col-md-6 pb">
+<a href="https://code.google.com/p/oppia/issues/list?can=2&q=difficulty=Easy&sort=difficulty&colspec=ID%20Type%20Status%20Priority%20Difficulty%20Owner%20Summary"><span class="glyphicon glyphicon-thumbs-up"></span> Curated Tasks</a>
+					</div>
+				</div>
+				<div class="row no-space">
+					<div class="col-md-6 pb">
+<a href="https://code.google.com/p/oppia/wiki/MakingAChange"><span class="glyphicon glyphicon-thumbs-up"></span>
+Contribution Guide</a>
+                        		</div>
+					<div class="col-md-6 pb">
+<a href="https://code.google.com/p/oppia/wiki/GettingStarted"><span class="glyphicon glyphicon-thumbs-up"></span>
+Installation Guide</a>
+					</div>
+				</div>
+                        <p>Events<br /> UMass-Amherst (upcoming!)</p>
 	        	</div>
+
 			<div class="col-md-4">
 	        	</div>
 	</div>
