Make logos a part of the deal

--- a/index.html
+++ b/index.html
@@ -346,6 +346,8 @@ MY_NAME</p></pre>
                 <div class="col-xs-12">
                     <h3>$1,000 &ndash; Individual Event</h3>
                     <ul>
+                        <li>Your name and sponsorship level on the
+                        program website</li>
                         <li>Your name and sponsorship level in all print,
                         email, and web announcements for that event</li>
                     </ul>
@@ -353,7 +355,7 @@ MY_NAME</p></pre>
                 <div class="col-xs-12">
                     <h3>$2,000 &ndash; Bronze</h3>
                     <ul>
-                        <li>Your name and sponsorship level on the
+                        <li>Your name, logo, and sponsorship level on the
                         program website</li>
                         <li>Your name and sponsorship level on all print,
                         email, and web announcements for one event</li>
@@ -364,7 +366,7 @@ MY_NAME</p></pre>
                 <div class="col-xs-12">
                     <h3>$4,000 &ndash; Silver</h3>
                     <ul>
-                        <li>Your name and sponsorship level on the
+                        <li>Your name, logo, and sponsorship level on the
                         program website</li>
                         <li>Your name and sponsorship level on all
                         email and web announcements, as well as mentioned to media in interviews about the program</li>
@@ -377,7 +379,7 @@ MY_NAME</p></pre>
                     <ul>
                         <li>Your name and logo at opening and closing
                         of all workshops</li>
-                        <li>Your name and sponsorship level on the
+                        <li>Your name, logo, and sponsorship level on the
                         program website</li>
                         <li>Your name and sponsorship level on all
                         email and web announcements, as well as mentioned to media in interviews about the program</li>
@@ -393,7 +395,7 @@ MY_NAME</p></pre>
                         attendees from your organization</li>
                         <li>Your name and logo at opening and closing
                         of all workshops</li>
-                        <li>Your name and sponsorship level on the
+                        <li>Your name, logo, and sponsorship level on the
                         program website</li>
                         <li>Your name and sponsorship level on all
                         email and web announcements, as well as mentioned to media in interviews about the program</li>
