State the next steps

--- a/index.html
+++ b/index.html
@@ -407,6 +407,10 @@ MY_NAME</p></pre>
                     <h3>$X &ndash; Custom Level</h3>
                     <p>None of the above donation levels work for you? <a href="hello@openhatch.org">Email us</a> and we'll work something out.</p>
                 </div>
+                <div class="col-xs-12">
+                    <h3>How to sponsor</h3>
+                    <p>Get in touch with us by emailing hello at openhatch.org, or jump straight to the <a href="https://openhatch.org/donate/">donate page</a> and enter your donation amount at the Maverick level.</p>
+                </div>
             </div>
         </div>
     </div>
