Add budget link to sponsorship area

--- a/index.html
+++ b/index.html
@@ -410,6 +410,7 @@ MY_NAME</p></pre>
                 <div class="col-xs-12">
                     <h3>How to sponsor</h3>
                     <p>Get in touch with us by emailing hello at openhatch.org, or jump straight to the <a href="https://openhatch.org/donate/">donate page</a> and enter your donation amount at the Maverick level.</p>
+                    <p>We encourage you to read our <a href="https://docs.google.com/spreadsheets/d/1NMiwisDYcxVvdLM4jgwgg8QvvLkWlNEi7CLtfN0oHqI/edit#gid=0">2014 planned program budget</a>.
                 </div>
             </div>
         </div>
