Link to old sponsor prospectus from 2014 sponsorship page

--- a/index.html
+++ b/index.html
@@ -411,6 +411,7 @@ MY_NAME</p></pre>
                     <h3>How to sponsor</h3>
                     <p>Get in touch with us by emailing hello at openhatch.org, or jump straight to the <a href="https://openhatch.org/donate/">donate page</a> and enter your donation amount at the Maverick level.</p>
                     <p>We encourage you to read our <a href="https://docs.google.com/spreadsheets/d/1NMiwisDYcxVvdLM4jgwgg8QvvLkWlNEi7CLtfN0oHqI/edit#gid=0">2014 planned program budget</a>.
+                    <p>Our <a href="http://linode.openhatch.org/~paulproteus/oss-campus-diversity.pdf">historic 2013 sponsor prospectus</a> summarizes the origin and goals of the program.</p>
                 </div>
             </div>
         </div>
