Remove duplicate ID

--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@ MY_NAME</p></pre>
 <div id="sponsorship" class="container">
     <div class="row">
         <div class="col-md-8 col-md-offset-2">
-            <h1 id="pastevents">Sponsorship</h1>
+            <h1>Sponsorship</h1>
         </div>
     </div>
     <div class="row">
