Adjust sponsorship levels, per conversation with Luke

--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@ MY_NAME</p></pre>
         <div class="tiers col-md-8 col-md-offset-2">
             <div class="row">
                 <div class="col-xs-12">
-                    <h3>$1,000 &ndash; Individual Event</h3>
+                    <h3>$1,000 &ndash; Event Sponsor</h3>
                     <ul>
                         <li>Your name and sponsorship level on the
                         program website</li>
@@ -353,7 +353,7 @@ MY_NAME</p></pre>
                     </ul>
                 </div>
                 <div class="col-xs-12">
-                    <h3>$2,000 &ndash; Bronze</h3>
+                    <h3>$2,000 &ndash; Patron</h3>
                     <ul>
                         <li>Your name, logo, and sponsorship level on the
                         program website</li>
@@ -364,7 +364,7 @@ MY_NAME</p></pre>
                     </ul>
                 </div>
                 <div class="col-xs-12">
-                    <h3>$4,000 &ndash; Silver</h3>
+                    <h3>$4,000 &ndash; Gold</h3>
                     <ul>
                         <li>Your name, logo, and sponsorship level on the
                         program website</li>
@@ -375,7 +375,7 @@ MY_NAME</p></pre>
                     </ul>
                 </div>
                 <div class="col-xs-12">
-                    <h3>$8,000 &ndash; Gold</h3>
+                    <h3>$8,000 &ndash; Platinum</h3>
                     <ul>
                         <li>Your name and logo at opening and closing
                         of all workshops</li>
@@ -388,7 +388,7 @@ MY_NAME</p></pre>
                     </ul>
                 </div>
                 <div class="col-xs-12">
-                    <h3>$16,000 &ndash; Platinum</h3>
+                    <h3>$16,000 &ndash; Diamond</h3>
                     <ul>
                         <li>An invitation to provide brand signage at
                         every workshop, and to provide gifts to
