Event Sponsor => Champion

--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@ MY_NAME</p></pre>
         <div class="tiers col-md-8 col-md-offset-2">
             <div class="row">
                 <div class="col-xs-12">
-                    <h3>$1,000 &ndash; Event Sponsor</h3>
+                    <h3>$1,000 &ndash; Champion</h3>
                     <ul>
                         <li>Your name and sponsorship level on the
                         program website</li>
