adds upcoming events, minor changes

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <p class="lead">Open Source Comes to Campus is a one-day workshop to teach the tools and culture of open source development and to help students impact real projects. Groups at <a href="#pastevents">18 schools</a> have run this event, including 8 women-in-CS organizations. What about your school?</p>
                 <a type="button" class="btn btn-lg btn-primary" href="#signup" id="actsignup"><span class="glyphicon glyphicon-ok-sign"></span> Get started</a>
                 <a type="button" class="btn btn-lg btn-info" href="#learnmore"><span class="glyphicon glyphicon-question-sign"></span> Learn more</a>
+		<a type="button" class="btn btn-lg btn-primary" href="#upcoming"><span class="glyphicon glyphicon-calendar"></span> Events</a>
                 </center>
             </div>
         </div>
@@ -142,26 +143,42 @@ MY_NAME</p></pre>
 </div>
 
 <div class="row">
-	<div class="col-md-8 col-md-offset-2">
+	<div class="col-md-8 col-md-offset-2" id="volunteer">
 
-<h1>How to help out</h1>
-<p>If you're looking to participate, but you're not a student, staffer, or alumnus of a college, you can still help out! Here are other ways you can get involved:</p>
-<ul>
-<li>Volunteer to teach at an event near you</li>
-<li>Getting your open source project <a href="http://opensource-events.com/">ready for new contributors</a>, and let us know</li>
-<li>Help us find company sponsorships</li>
-<li><a href="https://github.com/openhatch/open-source-comes-to-campus">Contribute to the project</a></li>
-</ul>
-<p>If any of that sounds appealing, email us: hello@openhatch.org.</p>
+		<h1>How to help out</h1>
+		<p>If you're looking to participate, but you're not a student, staffer, or alumnus of a college, you can still help out! Here are other ways you can get involved:</p>
+		<ul>
+		<li>Volunteer to teach at an event near you</li>
+		<li>Get your open source project <a href="http://campus.openhatch.org/projects.html">ready for new contributors</a>, and let us know</li>
+		<li>Help us find company sponsorships</li>
+		<li><a href="https://github.com/openhatch/open-source-comes-to-campus">Contribute to the project</a></li>
+		</ul>
+		<p>If any of that sounds appealing, email us: hello@openhatch.org.</p>
+	</div>
 </div>
+
+	<div class="row" id="upcoming">
+		<div class="col-md-8 col-md-offset-2">
+			<h1 id="pastevents">Upcoming Events</h1>
+		<p>Please join us at the following events:</p>
+		<ul>
+		<li><a href="http://hackmason.org/openhatch/">Saturday, April 19th at George Mason University</a></li>
+		<li><a href="http://chicago.openhatch.org/">Saturday, April 26th at Northeastern Illinois University</a></li>
+		<li><a href="http://openhatch.mit.edu/">Saturday, April 26th and Sunday, April 27th at MIT</a></li>
+		<li>Saturday, May 3rd at Hartnell College</li>
+		<li>Saturday, May 10th at UC-Davis</li>
+		</ul>
+		<p>To attend, please contact us at hello@openhatch.org.</p>
+		</div>
 	</div>
 
 </div>
 </div>
 
+
 <div class="pastevents">
 <div class="container">
-	<div class="row">
+	<div class="row" id="past">
 		<div class="col-md-8 col-md-offset-2">
 			<h1 id="pastevents">Past Events</h1>
 		</div>
@@ -323,7 +340,7 @@ MY_NAME</p></pre>
 
 		<div class="row">
 			<div class="col-md-10 col-md-offset-1 endofpage">
-			<p>Want to learn more about Open Source Comes to Campus?  You can <a href="http://lists.openhatch.org/mailman/listinfo/osctc-planning">join our mailing list</a> and <a href="http://openhatch.org/blog/tag/osctc/">read more on our blog</a>.</p>
+			
 			</div>
 		</div>
     </div>
@@ -421,7 +438,11 @@ MY_NAME</p></pre>
 <div class="bluestripe bottomstripe">
     <div class="container">
         <div class="row">
-            <div class="col-md-4 col-md-offset-8">
+	    <div class="col-md-8">
+<br /><br />
+<p>Want to learn more about Open Source Comes to Campus?  You can <a href="http://lists.openhatch.org/mailman/listinfo/osctc-planning">join our mailing list</a> and <a href="http://openhatch.org/blog/tag/osctc/">read more on our blog</a>.</p>
+	    </div>
+            <div class="col-md-4">
                 <h4 class="pull-right">A project of <a href="https://openhatch.org/"><img src="https://openhatch.org/w/images/thumb/a/a6/Openhatch-logo.png/500px-Openhatch-logo.png" width="100px"></a></h4>
             </div>
         </div>
