updates past events

--- a/index.html
+++ b/index.html
@@ -184,6 +184,30 @@ MY_NAME</p></pre>
 		</div>
 	</div>
 
+	<div class="row">
+			<div class="col-md-4">
+				<img src="./static/img/pe_ccsf2.jpg" class="img-thumbnail">
+				<h4>City College of San Francisco</h4>
+				<h4 class="date">March 22nd, 2014</h4>
+				<p>Hosted by <a href="http://www.ccsf.edu/coders">CCSF Coders</a> and the <a href="http://www.ccsf.edu/lug">CCSF Linux Users Group</a>.</p>
+				<span class="glyphicon glyphicon-star-empty"></span>  Pictures and blog posts coming soon!
+	        	</div>
+			<div class="col-md-4">
+				<img src="./static/img/pe_umass2.jpg" class="img-thumbnail">
+				<h4>University of Massachusetts at Amherst</h4>
+				<h4 class="date">March 8th, 2014</h4>
+				<p>Hosted by <a href="http://sites.ieee.org/sb-umassa/">UMass IEEE</a>.</p>
+				<span class="glyphicon glyphicon-star-empty"></span>  Pictures and blog posts coming soon!
+	        	</div>
+			<div class="col-md-4">
+				<img src="./static/img/pe_arizona.jpg" class="img-thumbnail">
+				<h4>University of Arizona</h4>
+				<h4 class="date">February 8th, 2014</h4>
+				<p>Hosted by UA's <a href="http://uofa-acm.github.io/">ACM Chapter</a>, <a href="https://www.cs.arizona.edu/wics/">WiCS Chapter</a> and <a href="http://uagamedev.blogspot.com/">Video Game Developers Club</a>.</p>
+				<span class="glyphicon glyphicon-star-empty"></span>  Pictures and blog posts coming soon!
+	        	</div>
+		</div>
+
         <div class="row">
 			<div class="col-md-4">
 				<img src="./static/img/pe_princeton.jpg" class="img-thumbnail">
