--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="headerpane">
                 <center>
                 <h1>Bring open source to your campus.</h1>
-                <p class="lead">Open Source Comes to Campus is a one-day workshop to teach the tools and culture of open source development and to help students impact real projects. Groups at <a href="#pastevents">18 schools</a> have run this event, including 8 women-in-CS organizations. What about your school?</p>
+                <p class="lead">Open Source Comes to Campus is a one-day workshop to teach the tools and culture of open source development and to help students impact real projects. Groups at <a href="#pastevents">21 schools</a> have run this event, including 9 women-in-CS organizations. What about your school?</p>
                 <a type="button" class="btn btn-lg btn-primary" href="#signup" id="actsignup"><span class="glyphicon glyphicon-ok-sign"></span> Get started</a>
                 <a type="button" class="btn btn-lg btn-info" href="#learnmore"><span class="glyphicon glyphicon-question-sign"></span> Learn more</a>
 		<a type="button" class="btn btn-lg btn-primary" href="#upcoming"><span class="glyphicon glyphicon-calendar"></span> Events</a>
@@ -159,7 +159,7 @@ MY_NAME</p></pre>
 
 	<div class="row" id="upcoming">
 		<div class="col-md-8 col-md-offset-2">
-			<h1 id="pastevents">Upcoming Events</h1>
+			<h1>Upcoming Events</h1>
 		<p>Please join us at the following events:</p>
 		<ul>
 		<li><a href="http://hackmason.org/openhatch/">Saturday, April 19th at George Mason University</a></li>
