updates the volunteer section

--- a/index.html
+++ b/index.html
@@ -148,12 +148,12 @@ MY_NAME</p></pre>
 		<h1>How to help out</h1>
 		<p>If you're looking to participate, but you're not a student, staffer, or alumnus of a college, you can still help out! Here are other ways you can get involved:</p>
 		<ul>
-		<li>Volunteer to teach at an event near you</li>
+		<li><a href="http://lists.openhatch.org/mailman/listinfo/mentors">Volunteer to teach</a> at an event near you</li>
 		<li>Get your open source project <a href="http://campus.openhatch.org/projects.html">ready for new contributors</a>, and let us know</li>
-		<li>Help us find company sponsorships</li>
 		<li><a href="https://github.com/openhatch/open-source-comes-to-campus">Contribute to the project</a></li>
+		<li><a href="http://openhatch.org/donate/">Donate</a> or help us find <a href="http://campus.openhatch.org/#sponsorship">company sponsorships</a></li>
 		</ul>
-		<p>If any of that sounds appealing, email us: hello@openhatch.org.</p>
+		<p>If you have other ideas for how we can collaborate, email us: hello@openhatch.org.</p>
 	</div>
 </div>
 
