--- a/scale.html
+++ b/scale.html
@@ -6,6 +6,7 @@
 </head>
 
 <body class="home page" data-spy="scroll" data-target="#sidenav" screen_capture_injected="true">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <div id="wrap">
 <div class="content">
